<resources>
    <string name="app_name">小米平板指针替换</string>
    <string name="text_114514">114514</string>
    <string name="more">关于</string>
    <string name="content_description_more">关于</string>
    <string name="page_title">米板指针替换</string>
    <string name="module_active_text">模块已激活</string>
    <string name="module_inactive">模块未激活</string>
    <string name="module_info_text">模块信息</string>
    <string name="version_text">版本</string>
    <string name="module_setting_text">设置</string>
    <string name="setting_info_text">图标设置</string>
    <string name="settings_title">设置</string>
    <string name="hide_icon_text">隐藏桌面图标</string>
    <string name="new_version_switch_text">使用Android12新版MagicPointer隐藏特性 (Android11请自测)</string>
    <string name="关于">关于</string>
    <string name="酷安">酷安@xunflash</string>
    <string name="Githubid">Github@Xunflash</string>
    <string name="xunflash">Xunflash</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="open_module">请先激活模块</string>
</resources>