<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="?attr/colorSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:ignore="HardcodedText">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_app_bar"
                app:title="@string/page_title" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/module_status_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/red_background"
            android:clickable="true"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/icon_status"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
                android:backgroundTint="@color/white"
                android:gravity="center" />

            <TextView
                android:id="@+id/module_status_text"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:text="@string/module_inactive"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/module_info_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/clickable_white"
            android:clickable="true"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/icon_info"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_round_info_24"
                android:backgroundTint="@color/blue_android_dark"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/module_info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|start"
                    android:text="@string/module_info_text"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/version_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/version_text"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/clickable_white"
            android:clickable="true"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:onClick="toSettingActivity">

            <View
                android:id="@+id/icon_settings"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_round_settings_24"
                android:backgroundTint="@color/blue_android_dark"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/module_setting_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|start"
                    android:text="@string/module_setting_text"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/setting_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_info_text"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:fadingEdgeLength="10dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:requiresFadingEdge="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>